objects/User_Profile_Event__c.object
<CustomObject>
    <fields>
        <fullName>Attendee_Event_IDs__c</fullName>
        <externalId>true</externalId>
        <label>Attendee Event IDs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee_Summary__c</fullName>
        <label>Attendee_Summary</label>
        <referenceTo>AttendeeSummary__c</referenceTo>
        <relationshipLabel>User_Profile_Event</relationshipLabel>
        <relationshipName>User_Profile_Event</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BLP_id__c</fullName>
        <label>BL Pricing</label>
        <referenceTo>BL_Pricing__c</referenceTo>
        <relationshipLabel>User_Profile_Event</relationshipLabel>
        <relationshipName>User_Profile_Event</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BT_id__c</fullName>
        <label>Booth</label>
        <referenceTo>Booth__c</referenceTo>
        <relationshipLabel>User_Profile_Event</relationshipLabel>
        <relationshipName>User_Profile_Event</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BoothAdmin_id__c</fullName>
        <label>BoothAdmin</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Profile_Event1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EV_id__c</fullName>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>User_Profile_Event</relationshipLabel>
        <relationshipName>User_Profile_Event</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventAdmin_Id__c</fullName>
        <label>EventAdmin</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Profile_Event2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Floor_Map__c</fullName>
        <label>Floor Map</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GNEMSDC_Event_Test__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GNEMSDC Event Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsBoothLeadsUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsBoothLeadsUser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsBoothPersonnel__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsBoothPersonnel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsMatchMakingUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsMatchMakingUser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MAtchMakingProfile__c</fullName>
        <label>MAtchMakingProfile</label>
        <picklist>
            <picklistValues>
                <fullName>MBE</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CorporateStaff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WaitingList</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MM_TableNo__c</fullName>
        <label>MM_TableNo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Profile_id__c</fullName>
        <label>Profile</label>
        <referenceTo>Profile__c</referenceTo>
        <relationshipLabel>User_Profile_Event</relationshipLabel>
        <relationshipName>User_Profile_Event</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_for_upgrade_profile__c</fullName>
        <defaultValue>false</defaultValue>
        <description>this check box will be fiiled from sign up page if the user is already exist with attendee and from sign up he selected as Corporate.</description>
        <label>Request for upgrade profile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Slot_Time_Interval__c</fullName>
        <label>Slot Time Interval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InActive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile only access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile and Portal Access</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UEP_isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_id__c</fullName>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Profile_Event</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isFirstBoothAdmin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isFirstBoothAdmin</label>
        <type>Checkbox</type>
    </fields>
    <label>User_Profile_Event</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MAtchMakingProfile__c</columns>
        <columns>User_id__c</columns>
        <columns>EV_id__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>EventAdmin_Id__c</columns>
        <columns>BoothAdmin_id__c</columns>
        <columns>BT_id__c</columns>
        <columns>UEP_isActive__c</columns>
        <columns>IsBoothPersonnel__c</columns>
        <columns>Status__c</columns>
        <columns>Profile_id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EV_id__c</field>
            <operation>equals</operation>
            <value>QR_EVT_1213_0074268</value>
        </filters>
        <filters>
            <field>Profile_id__c</field>
            <operation>equals</operation>
            <value>PR_517</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>GNEMSDC</fullName>
        <columns>NAME</columns>
        <columns>User_id__c</columns>
        <columns>EventAdmin_Id__c</columns>
        <columns>MAtchMakingProfile__c</columns>
        <columns>IsMatchMakingUser__c</columns>
        <columns>Profile_id__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EV_id__c</field>
            <operation>equals</operation>
            <value>QR_EVT_2315_0288955</value>
        </filters>
        <label>GNEMSDC</label>
    </listViews>
    <listViews>
        <fullName>SPE_LI</fullName>
        <columns>User_id__c</columns>
        <columns>UEP_isActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EV_id__c</field>
            <operation>equals</operation>
            <value>QR_EVT_0813_0072295</value>
        </filters>
        <label>SPE LI</label>
    </listViews>
    <listViews>
        <fullName>Shellis</fullName>
        <columns>MAtchMakingProfile__c</columns>
        <columns>User_id__c</columns>
        <columns>UEP_isActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EV_id__c</field>
            <operation>equals</operation>
            <value>QR_EVT_1714_0102478</value>
        </filters>
        <filters>
            <field>MAtchMakingProfile__c</field>
            <operation>equals</operation>
            <value>Corporate</value>
        </filters>
        <label>Shellis</label>
    </listViews>
    <nameField>
        <displayFormat>UPE_{00000000}</displayFormat>
        <label>UPE_id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User_Profile_Event</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>